@@ -5,7 +5,6 @@
 
 #include <string>
 
-#include "OpaqueVal.h"
 #include "../File.h"
 #include "Analyzer.h"
 #include "X509Common.h"
@@ -13,8 +12,6 @@
 #include <openssl/ocsp.h>
 
 namespace file_analysis {
-
-class OCSP_RESPVal;
 
 class OCSP : public file_analysis::X509Common {
 public:
@@ -29,25 +26,12 @@ protected:
 	OCSP(RecordVal* args, File* file, bool request);
 
 private:
-	void ParseResponse(OCSP_RESPVal*);
+	void ParseResponse(OCSP_RESPONSE*);
 	void ParseRequest(OCSP_REQUEST*);
 	void ParseExtensionsSpecific(X509_EXTENSION* ex, bool, ASN1_OBJECT*, const char*) override;
 
 	std::string ocsp_data;
 	bool request = false; // true if ocsp request, false if reply
-};
-
-class OCSP_RESPVal: public OpaqueVal {
-public:
-	explicit OCSP_RESPVal(OCSP_RESPONSE *);
-	~OCSP_RESPVal() override;
-	OCSP_RESPONSE *GetResp() const;
-protected:
-	OCSP_RESPVal();
-
-	DECLARE_OPAQUE_VALUE(OCSP_RESPVal)
-private:
-	OCSP_RESPONSE *ocsp_resp;
 };
 
 }
