@@ -32,7 +32,7 @@ event ocsp_response_status(f: fa_file, status: string)
 	print "ocsp_response_status", status;
 	}
 
-event ocsp_response_bytes(f: fa_file, resp_ref: opaque of ocsp_resp, status: string, version: count, responderId: string, producedAt: time, signatureAlgorithm: string, certs: x509_opaque_vector)
+event ocsp_response_bytes(f: fa_file, status: string, version: count, responderId: string, producedAt: time, signatureAlgorithm: string, certs: x509_opaque_vector)
 	{
 	print "ocsp_response_bytes", status, version, responderId, producedAt, signatureAlgorithm;
 	}
